--- a/app/res/layout/item_earned_credential.xml
+++ b/app/res/layout/item_earned_credential.xml
@@ -22,7 +22,7 @@
             android:padding="2dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:shapeAppearanceOverlay="@style/circleImageView"
+            app:shapeAppearanceOverlay="@style/personalIdCircleImageView"
             app:strokeColor="@color/gray_400"
             app:strokeWidth="2dp" />
 
