--- a/app/res/layout/item_pending_credential.xml
+++ b/app/res/layout/item_pending_credential.xml
@@ -17,7 +17,7 @@
             android:id="@+id/ivPending"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/ic_pending"
+            android:src="@drawable/ic_personalid_credential_pending_person"
             app:layout_constraintEnd_toEndOf="@id/tvPending"
             app:layout_constraintStart_toStartOf="@id/tvPending"
             app:layout_constraintTop_toTopOf="parent" />
@@ -30,7 +30,7 @@
             android:background="@drawable/personal_id_credential_pending"
             android:paddingHorizontal="10dp"
             android:paddingVertical="2dp"
-            android:text="@string/pending"
+            android:text="@string/personalid_credential_pending"
             android:textColor="@color/personal_id_credential_yellow_pending"
             android:textSize="12sp"
             app:layout_constraintBottom_toBottomOf="parent"
