--- a/app/res/values/styles.xml
+++ b/app/res/values/styles.xml
@@ -355,7 +355,7 @@
         <item name="android:textColor">@color/cc_brand_text</item>
     </style>
 
-    <style name="circleImageView" parent="">
+    <style name="personalIdCircleImageView" parent="">
         <item name="cornerFamily">rounded</item>
         <item name="cornerSize">50%</item>
     </style>
