--- a/app/res/layout/nav_drawer_list_item.xml
+++ b/app/res/layout/nav_drawer_list_item.xml
@@ -1,4 +1,5 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/parent_item_container"
     android:layout_width="match_parent"
@@ -6,9 +7,7 @@
     android:orientation="horizontal"
     android:padding="16dp"
     android:gravity="center_vertical"
-    android:background="@color/cc_brand_color"
-    android:clickable="true"
-    android:focusable="true">
+    android:background="@color/cc_brand_color">
 
     <ImageView
         android:id="@+id/list_icon"
@@ -27,7 +26,7 @@
         android:layout_marginStart="12dp"/>
 
     <ImageView
-        android:id="@+id/arroe_icon"
+        android:id="@+id/arrow_icon"
         android:layout_width="24dp"
         android:layout_height="24dp"
         android:paddingStart="16dp"
