--- a/app/res/layout/nav_drawer_sublist_item.xml
+++ b/app/res/layout/nav_drawer_sublist_item.xml
@@ -8,9 +8,7 @@
     android:paddingTop="12dp"
     android:paddingBottom="12dp"
     android:gravity="center_vertical"
-    android:background="@color/cc_brand_color"
-    android:clickable="true"
-    android:focusable="true">
+    android:background="@color/cc_brand_color">
 
     <ImageView
         android:layout_width="24dp"
