--- a/app/res/menu/menu_app_home.xml
+++ b/app/res/menu/menu_app_home.xml
@@ -2,6 +2,11 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
+        android:id="@+id/action_messaging"
+        android:icon="@drawable/ic_connect_messaging_base"
+        android:title="@string/personalid_messaging_menu_title"
+        app:showAsAction="always" />
+    <item
         android:id="@+id/action_update"
         android:icon="@android:drawable/ic_menu_upload"
         android:title="Update"
