-resolved coderabbit comments

--- a/app/res/layout/nav_drawer_base.xml
+++ b/app/res/layout/nav_drawer_base.xml
@@ -41,7 +41,7 @@
                 android:paddingTop="16dp"
                 android:clickable="true"
                 android:textColor="@color/white"
-                android:text="@string/left_navigation_menu_not_signed_in_to_personal_id"/>
+                android:text="@string/nav_drawer_not_signed_in_to_personal_id"/>
             <TextView
                 android:id="@+id/nav_drawer_sign_in_text"
                 android:layout_width="wrap_content"
@@ -50,11 +50,11 @@
                 android:layout_gravity="center"
                 android:paddingTop="16dp"
                 android:textColor="@color/white"
-                android:text="@string/left_navigation_menu_signin_register"/>
+                android:text="@string/nav_drawer_signin_register"/>
         </LinearLayout>
 
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/signin_view"
+            android:id="@+id/nav_drawer_recycler"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
