--- a/app/res/layout/nav_drawer_list_item.xml
+++ b/app/res/layout/nav_drawer_list_item.xml
@@ -14,13 +14,13 @@
         android:layout_width="24dp"
         android:layout_height="24dp"
         android:src="@drawable/commcare_actionbar_logo"
-        app:tint="@android:color/white" />
+        app:tint="@android:color/white"
+        android:contentDescription="@null"/>
 
     <TextView
         android:id="@+id/list_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="CommCare Apps"
         android:textColor="@android:color/white"
         android:textSize="14sp"
         android:layout_marginStart="12dp"/>
@@ -31,5 +31,6 @@
         android:layout_height="24dp"
         android:paddingStart="16dp"
         android:src="@drawable/ic_blue_forward"
-        app:tint="@android:color/white" />
+        app:tint="@android:color/white"
+        android:contentDescription="@null"/>
 </LinearLayout>
