--- a/app/res/layout/nav_drawer_sublist_item.xml
+++ b/app/res/layout/nav_drawer_sublist_item.xml
@@ -1,5 +1,4 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/child_item_container"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -13,14 +12,14 @@
     <ImageView
         android:layout_width="24dp"
         android:layout_height="24dp"
-        android:src="@drawable/nav_drawer_app_icon"/>
+        android:src="@drawable/nav_drawer_app_icon"
+        android:contentDescription="@null"/>
 
     <TextView
         android:id="@+id/sublist_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:paddingStart="16dp"
-        android:text="Sample Job One"
         android:textColor="@android:color/white"
         android:textSize="14sp"/>
 </LinearLayout>
