--- a/app/res/layout/nav_drawer_header.xml
+++ b/app/res/layout/nav_drawer_header.xml
@@ -59,17 +59,15 @@
                     android:id="@+id/user_name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textColor="@color/white"
-                    android:textSize="14sp"/>
+                    android:textAppearance="@style/TextAppearance.NavDrawerItem"/>
 
                 <TextView
                     android:id="@+id/manage_profile"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/nav_drawer_manage_profile"
-                    android:textColor="@color/white"
                     android:paddingTop="4dp"
-                    android:textSize="12sp"/>
+                    android:textAppearance="@style/TextAppearance.NavDrawerItem.SubTitle"/>
             </LinearLayout>
         </LinearLayout>
     </androidx.cardview.widget.CardView>
