--- a/app/res/layout/nav_drawer_list_item.xml
+++ b/app/res/layout/nav_drawer_list_item.xml
@@ -21,8 +21,7 @@
         android:id="@+id/list_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textColor="@android:color/white"
-        android:textSize="14sp"
+        android:textAppearance="@style/TextAppearance.NavDrawerItem"
         android:layout_marginStart="12dp"/>
 
     <ImageView
