--- a/app/res/layout/nav_drawer_sublist_item.xml
+++ b/app/res/layout/nav_drawer_sublist_item.xml
@@ -20,6 +20,5 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:paddingStart="16dp"
-        android:textColor="@android:color/white"
-        android:textSize="14sp"/>
+        android:textAppearance="@style/TextAppearance.NavDrawerItem"/>
 </LinearLayout>
