- set text appearence on disable state

--- a/app/res/layout/nav_drawer_base.xml
+++ b/app/res/layout/nav_drawer_base.xml
@@ -48,6 +48,7 @@
                         android:layout_height="wrap_content"
                         android:focusable="true"
                         android:layout_gravity="center"
+                        android:textAlignment="center"
                         android:paddingTop="16dp"
                         android:clickable="true"
                         android:textAppearance="@style/TextAppearance.NavDrawerItem"
