--- a/app/res/values/styles.xml
+++ b/app/res/values/styles.xml
@@ -360,18 +360,14 @@
         <item name="cornerSize">50%</item>
     </style>
 
-    <style name="TextAppearance.NavDrawerItem">
+    <style name="TextAppearance.NavDrawerItem" parent="@android:style/TextAppearance">
         <item name="android:textSize">14sp</item>
+        <item name="android:textColor">@color/nav_drawer_text</item>
+    </style>
+
+    <style name="TextAppearance.NavDrawerItem.SubTitle" parent="@android:style/TextAppearance">
+        <item name="android:textSize">12sp</item>
         <item name="android:textColor">@color/white</item>
     </style>
 
-    <style name="TextAppearance.NavDrawerItem.SubTitle">
-        <item name="android:textSize">14sp</item>
-        <item name="android:textColor">@color/white</item>
-    </style>
-
-    <style name="TextAppearance.NavDrawerItem.Disabled">
-        <item name="android:textSize">14sp</item>
-        <item name="android:textColor">@color/nav_drawer_disable_color</item>
-    </style>
 </resources>
