--- a/app/res/layout/item_earned_credential.xml
+++ b/app/res/layout/item_earned_credential.xml
@@ -84,7 +84,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:src="@drawable/ic_ribbin"
+            android:src="@drawable/ic_personalid_credential_ribbin"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/tvActivity" />
