--- a/app/res/menu/menu_work_history.xml
+++ b/app/res/menu/menu_work_history.xml
@@ -4,7 +4,7 @@
         android:id="@+id/cloud_sync"
         android:title="@string/personalid_credential_cloud_sync"
         android:contentDescription="@string/personalid_credential_cloud_sync"
-        android:icon="@drawable/ic_cloud_sync"
+        android:icon="@drawable/ic_backup"
         app:showAsAction="always"/>
 
     <item
