--- a/app/res/layout/nav_drawer_footer.xml
+++ b/app/res/layout/nav_drawer_footer.xml
@@ -49,7 +49,8 @@
         android:foreground="?attr/selectableItemBackground"
         android:paddingEnd="16dp"
         android:orientation="horizontal"
-        android:gravity="center_vertical">
+        android:gravity="center_vertical"
+        android:visibility="gone">
 
         <ImageView
             android:layout_width="24dp"
