--- a/app/res/layout/nav_drawer_header.xml
+++ b/app/res/layout/nav_drawer_header.xml
@@ -41,10 +41,11 @@
             android:layout_height="wrap_content"
             android:padding="16dp"
             android:orientation="horizontal">
-            <com.google.android.material.imageview.ShapeableImageView
+            <ImageView
                 android:id="@+id/image_user_profile"
                 android:layout_width="64dp"
                 android:layout_height="wrap_content"
+                android:contentDescription="@null"
                 android:scaleType="centerCrop"
                 app:shapeAppearanceOverlay="@style/CircularImageView"
                 android:src="@drawable/nav_drawer_person_avatar"/>
