--- a/app/res/layout/nav_drawer_header.xml
+++ b/app/res/layout/nav_drawer_header.xml
@@ -1,5 +1,7 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<layout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+<LinearLayout
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -79,3 +81,4 @@
         android:paddingBottom="16dp"
         android:background="@color/darker_grey"/>
 </LinearLayout>
+</layout>
