--- a/app/res/values-w320dp/dimens.xml
+++ b/app/res/values-w320dp/dimens.xml
@@ -10,4 +10,5 @@
     <dimen name="row_padding_vertical">8sp</dimen>
     <dimen name="row_padding_horizontal">8sp</dimen>
     <dimen name="rectangle_button_height">60dp</dimen>
+    <dimen name="nav_drawer_width">264dp</dimen>
 </resources>
