--- a/app/res/layout/nav_drawer_footer.xml
+++ b/app/res/layout/nav_drawer_footer.xml
@@ -72,7 +72,8 @@
         android:id="@+id/app_version"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="@style/TextAppearance.NavDrawerItem"
+        android:textAppearance="@style/TextAppearance.NavDrawerItem.SubTitle"
+        android:enabled="false"
         android:layout_marginTop="8dp"
         android:layout_marginStart="16dp"/>
 
