--- a/app/res/values/styles.xml
+++ b/app/res/values/styles.xml
@@ -367,7 +367,7 @@
 
     <style name="TextAppearance.NavDrawerItem.SubTitle" parent="@android:style/TextAppearance">
         <item name="android:textSize">12sp</item>
-        <item name="android:textColor">@color/white</item>
+        <item name="android:textColor">@color/nav_drawer_text</item>
     </style>
 
 </resources>
