--- a/app/res/layout/item_earned_credential.xml
+++ b/app/res/layout/item_earned_credential.xml
@@ -31,11 +31,10 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
-            android:fontFamily="@font/roboto_medium"
             android:gravity="center"
             android:paddingHorizontal="5dp"
             android:text="RFSA Quality Improvement Verification Checklist Management "
-            android:textColor="@color/connect_aquva"
+            android:textColor="@color/connect_aqua"
             android:textSize="14sp"
             app:layout_constraintBottom_toBottomOf="@id/ivProfilePic"
             app:layout_constraintEnd_toEndOf="parent"
@@ -47,7 +46,6 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            android:fontFamily="@font/roboto_medium"
             android:text="RFSA Quality Improvement Verification Checklist Management "
             android:textColor="@color/white"
             android:textSize="14sp"
@@ -68,7 +66,6 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            android:fontFamily="@font/roboto_medium"
             android:gravity="center"
             android:paddingHorizontal="15dp"
             android:text="3 Months of Activity"
@@ -112,7 +109,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="5dp"
-            android:fontFamily="@font/roboto_medium"
             android:text="Completed on 21/02/2024"
             android:textColor="@color/personal_id_credential_earned_grey"
             android:textSize="11sp"
