--- a/app/res/layout/first_start_screen_modern.xml
+++ b/app/res/layout/first_start_screen_modern.xml
@@ -1,11 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
+<androidx.drawerlayout.widget.DrawerLayout android:id="@+id/drawer_layout"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:tag="layout/activity_login_0"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:tools="http://schemas.android.com/tools">
+<FrameLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/cc_core_bg"
-    tools:viewBindingIgnore="true">
+    tools:viewBindingIgnore="true"
+    android:id="@+id/nav_drawer_frame">
     <!-- Fragment container, will hold the actual setup app screen here -->
     <FrameLayout
         android:id="@+id/setup_fragment_container"
@@ -16,3 +21,6 @@
 
 
 </FrameLayout>
+    <include layout="@layout/nav_drawer_base"/>
+
+</androidx.drawerlayout.widget.DrawerLayout>
