--- a/app/res/layout/nav_drawer_sublist_item.xml
+++ b/app/res/layout/nav_drawer_sublist_item.xml
@@ -3,11 +3,20 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
-    android:paddingStart="48dp"
+    android:paddingStart="24dp"
     android:paddingTop="12dp"
     android:paddingBottom="12dp"
     android:gravity="center_vertical"
     android:background="@color/cc_brand_color">
+
+    <ImageView
+        android:id="@+id/sublist_highlight_icon"
+        android:layout_width="24dp"
+        android:layout_height="24dp"
+        android:layout_marginEnd="12dp"
+        android:src="@drawable/icon_chevron_right_white"
+        android:contentDescription="@null"
+        android:visibility="gone"/>
 
     <ImageView
         android:layout_width="24dp"
