--- a/app/res/layout/nav_drawer_header.xml
+++ b/app/res/layout/nav_drawer_header.xml
@@ -41,7 +41,7 @@
                 android:layout_marginStart="16dp"
                 android:orientation="vertical">
                 <TextView
-                    android:id="@+id/user_name"
+                    android:id="@+id/header_user_name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textAppearance="@style/TextAppearance.NavDrawerItem"/>
