Handled empty text in both tab's changed cloud icon to white

--- a/app/res/layout/fragment_pending_credential.xml
+++ b/app/res/layout/fragment_pending_credential.xml
@@ -5,6 +5,20 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context="org.commcare.fragments.personalId.PendingCredentialFragment">
 
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/tvNoPendingCredential"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="15dp"
+        android:layout_marginTop="10dp"
+        android:textColor="@color/black"
+        android:textSize="14sp"
+        android:visibility="gone"
+        android:text="@string/personalid_credential_no_pending_credential"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvPendingCredential"
         android:layout_width="0dp"
