--- a/app/res/layout/fragment_earned_credential.xml
+++ b/app/res/layout/fragment_earned_credential.xml
@@ -15,6 +15,7 @@
         android:gravity="start"
         android:lineSpacingExtra="10dp"
         android:padding="20dp"
+        android:visibility="gone"
         android:text="@string/personalid_credential_no_credentials_currently_available"
         android:textColor="@color/connect_yellow_dot"
         android:textSize="14sp"
