Added PushNotificationActivity and handle navigation for it

--- a/app/res/menu/menu_connect.xml
+++ b/app/res/menu/menu_connect.xml
@@ -12,6 +12,13 @@
         android:title="@string/personalid_credential"
         android:visible="false"
         app:showAsAction="always" />
+
+    <item
+        android:id="@+id/action_bell"
+        android:icon="@drawable/ic_bell"
+        android:title="@string/personalid_notification"
+        app:showAsAction="always" />
+
     <item
         android:id="@+id/action_sync"
         android:icon="@drawable/ic_backup"
